--- a/sitemap/index.html
+++ b/sitemap/index.html
@@ -456,7 +456,7 @@
 					<li><a href="/witnesses/victim/nyiszli-miklos/index.html">Nyiszli, Miklos</a></li>
 					<li><a href="/o/index.html">O</a></li>
 					<li><a href="/witnesses/perpetrator/oberhauser-josef/index.html">Oberhauser, Josef</a></li>
-					<li><a href="/categories/objects/index.html">Object</a></li>
+					<li><a href="/categories/objects.html">Objects</a></li>
 					<li><a href="/witnesses/victim/obrycki-narcyz-tadeusz/index.html">Obrycki, Narcyz Tadeusz</a></li>
 					<li><a href="/witnesses/victim/ochshorn-isaac-egon/index.html">Ochshorn, Isaac Egon</a></li>
 					<li><a href="/legal/institution/office-of-special-investigations/index.html">Office of Special Investigations</a></li>
@@ -489,7 +489,7 @@
 					<li><a href="/witnesses/victim/pilunov-ivanovich/index.html">Pilunov, Ivanovich</a></li>
 					<li><a href="/absurdities/pinsk/index.html">Pinsk</a></li>
 					<li><a href="/persons/legal-professional/pinter-stephen-f/index.html">Pinter, Stephen F.</a></li>
-					<li><a href="/plans-orders/index.html">Plan &amp; Order</a></li>
+					<li><a href="/categories/plans-orders/index.html">Plan &amp; Order</a></li>
 					<li><a href="/plans-orders/plan-to-exterminate-the-jews/index.html">Plan, to Exterminate the Jews</a></li>
 					<li><a href="/witnesses/victim/plucer-regina/index.html">Plucer, Regina</a></li>
 					<li><a href="/witnesses/victim/podchlebnik-michal/index.html">Podchlebnik, Michał</a></li>
