--- a/sitemap/index.html
+++ b/sitemap/index.html
@@ -610,7 +610,7 @@
 					<li><a href="/t/index.html">T</a></li>
 					<li><a href="/witnesses/victim/tabeau-jerzy/index.html">Tabeau, Jerzy</a></li>
 					<li><a href="/witnesses/victim/tauber-henryk/index.html">Tauber, Henryk</a></li>
-					<li><a href="/technologies/index.html">Technology</a></li>
+					<li><a href="/categories/technologies/index.html">Technology</a></li>
 					<li><a href="/terms-conditions-of-use/index.html">Terms &amp; Conditions of Use</a></li>
 					<li><a href="/legal/company/tesch-stabenow/index.html">Tesch &amp; Stabenow</a></li>
 					<li><a href="/persons/tesch-bruno/index.html">Tesch, Bruno</a></li>
@@ -621,7 +621,7 @@
 					<li><a href="/legal/company/topf-sohne-j-a/index.html">Topf &amp; Söhne, J.A.</a></li>
 					<li><a href="/events/torture/index.html">Torture</a></li>
 					<li><a href="/absurdities/towels-soap-toothbrushes-inside-gas-chambers/index.html">Towels, Soap, Toothbrushes inside Gas Chambers</a></li>
-					<li><a href="/toxins-chemicals/index.html">Toxin/Chemical</a></li>
+					<li><a href="/categories/toxins-chemicals.html">Toxins/Chemicals</a></li>
 					<li><a href="/witnesses/victim/trajtag-josef/index.html">Trajtag, Josef</a></li>
 					<li><a href="/locations/camps/transit-camps/index.html">Transit Camps</a></li>
 					<li><a href="/absurdities/trawniki/index.html">Trawniki</a></li>
@@ -645,7 +645,7 @@
 					<li><a href="/witnesses/victim/venezia-shlomo/index.html">Venezia, Shlomo</a></li>
 					<li><a href="/technologies/ventilation/index.html">Ventilation</a></li>
 					<li><a href="/categories/witnesses/victim/index.html">Victim</a></li>
-					<li><a href="/victim-groups/index.html">Victim Groups (non-Jewish)</a></li>
+					<li><a href="/categories/victim-groups.html">Victim Groups (non-Jewish)</a></li>
 					<li><a href="/persons/politician/voss-peter/index.html">Voss, Peter</a></li>
 					<li><a href="/witnesses/victim/vrba-rudolf/index.html">Vrba, Rudolf</a></li>
 					<li><a href="/w/index.html">W</a></li>
@@ -679,7 +679,7 @@
 					<li><a href="/legal/institution/wirtschafts-und-verwaltungs-hauptamt/index.html">Wirtschafts- und Verwaltungshauptamt</a></li>
 					<li><a href="/witnesses/perpetrator/wisliceny-dieter/index.html">Wisliceny, Dieter</a></li>
 					<li><a href="/legal/trial/witch-trials/index.html">Witch Trials</a></li>
-					<li><a href="/witnesses/index.html">Witness</a></li>
+					<li><a href="/categories/witnesses.html">Witnesses</a></li>
 					<li><a href="/witnesses/witnesses/index.html">Witnesses</a></li>
 					<li><a href="/witnesses/victim/witnesses-against-mass-murder/index.html">Witnesses against Mass Murder</a></li>
 					<li><a href="/witnesses/victim/wohlfahrt-wilhelm/index.html">Wohlfahrt, Wilhelm</a></li>
