syntax should be clean now

--- a/concepts/religion-holocaust-as/index.html
+++ b/concepts/religion-holocaust-as/index.html
@@ -55,8 +55,9 @@
 			</ul>
 			<blockquote>
 				<p>
-					The Holocaust became the new Western religion. Unfortunately, it is the most sinister religion known to man. It is a license to kill, to flatten, to nuke, to wipe, to rape, to loot and to ethnically cleanse. It made vengeance and revenge into a Western value. However, far more disconcerting is the fact that it robs humanity of its heritage, it is there to stop us from looking into our past with dignity. Holocaust religion robs humanity of its humanism.</q> &mdash;Gilad Atzmon
+					The Holocaust became the new Western religion. Unfortunately, it is the most sinister religion known to man. It is a license to kill, to flatten, to nuke, to wipe, to rape, to loot and to ethnically cleanse. It made vengeance and revenge into a Western value. However, far more disconcerting is the fact that it robs humanity of its heritage, it is there to stop us from looking into our past with dignity. Holocaust religion robs humanity of its humanism.
 				</p>
+				<small>Gilad Atzmon</small>
 			</blockquote>
 			<!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
