--- a/events/torture/index.html
+++ b/events/torture/index.html
@@ -77,8 +77,9 @@
 			</p>
 			<blockquote>
 				<p>
-					[A]fter the war, interrogators switched from extracting military intelligence to securing convictions for war crimes. Of 3,573 prisoners who passed through [the Cage], more than 1,000 were persuaded to sign a confession or give a witness statement for use in war crimes prosecutions.</q> (<a href="/bibliography/index.html#Cobain2012">Cobain 2012</a>)
+					[A]fter the war, interrogators switched from extracting military intelligence to securing convictions for war crimes. Of 3,573 prisoners who passed through [the Cage], more than 1,000 were persuaded to sign a confession or give a witness statement for use in war crimes prosecutions.
 				</p>
+				<small><a href="/bibliography/index.html#Cobain2012">Cobain 2012</a></small>
 			</blockquote>
 			<p>
 				Historian Stephen Howe summed up the situation (<a href="/bibliography/index.html#Howe">Howe 2012</a>):
