--- a/legal/trial/international-military-tribunal/index.html
+++ b/legal/trial/international-military-tribunal/index.html
@@ -90,8 +90,9 @@
 			</p>
 			<blockquote>
 				<p>
-					As a military tribunal, this Tribunal is a continuation of the war effort of the Allied nations. As an International Tribunal, it is not bound by the procedural and substantive refinements of our respective judicial or constitutional systems [&hellip;]</q> (<a href="/bibliography/index.html#IMT"><i>IMT</i></a>, Vol. 19, p. 398)
+					As a military tribunal, this Tribunal is a continuation of the war effort of the Allied nations. As an International Tribunal, it is not bound by the procedural and substantive refinements of our respective judicial or constitutional systems [&hellip;]
 				</p>
+				<small><a href="/bibliography/index.html#IMT"><i>IMT</i></a>, Vol. 19, p. 398</small>
 			</blockquote>
 			<p>
 				This mockery of international justice found its stage at the Nuremberg Court House, where the show unfolded from November 1945 to October 1946.
@@ -174,16 +175,18 @@
 			</p>
 			<blockquote>
 				<p>
-					The staff continues to grow every day. Col. [Benjamin] Kaplan is now here, as a mate, I assume, for Commander [William] Kaplan. Dr. [Randolph] Newman has arrived and I do not know how many more. It is all a silly business&mdash;but &lsquo;silly&rsquo; really isn&rsquo;t the right word. One would expect that some of these people would have sense enough to put an end to this kind of a parade. [&hellip;Y]ou will understand when I tell you that this staff is about 75% Jewish.</q> (<a href="/bibliography/index.html#Dodd">Dodd 2007</a>, p. 135)
+					The staff continues to grow every day. Col. [Benjamin] Kaplan is now here, as a mate, I assume, for Commander [William] Kaplan. Dr. [Randolph] Newman has arrived and I do not know how many more. It is all a silly business&mdash;but &lsquo;silly&rsquo; really isn&rsquo;t the right word. One would expect that some of these people would have sense enough to put an end to this kind of a parade. [&hellip;Y]ou will understand when I tell you that this staff is about 75% Jewish.
 				</p>
+				<small><a href="/bibliography/index.html#Dodd">Dodd 2007</a>, p. 135</small>
 			</blockquote>
 			<p>
 				Dodd clearly felt that this undermined the integrity of the trials:
 			</p>
 			<blockquote>
 				<p>
-					[T]he Jews should stay away from this trial&mdash;for their own sake. For&mdash;mark this well&mdash;the charge &lsquo;a war for the Jews&rsquo; is still being made, and in the post-war years it will be made again and again. The too-large percentage of Jewish men and women here will be cited as proof of this charge. Sometimes it seems that the Jews will never learn about these things. They seem intent on bringing new difficulties down on their own heads. I do not like to write about this matter [&hellip;] but I am disturbed about it. They are pushing and crowding and competing with each other, and with everyone else. They will try the case I guess.</q> (<a href="/bibliography/index.html#Dodd"><i>Ibid</i></a>., pp. 135f.)
+					[T]he Jews should stay away from this trial&mdash;for their own sake. For&mdash;mark this well&mdash;the charge &lsquo;a war for the Jews&rsquo; is still being made, and in the post-war years it will be made again and again. The too-large percentage of Jewish men and women here will be cited as proof of this charge. Sometimes it seems that the Jews will never learn about these things. They seem intent on bringing new difficulties down on their own heads. I do not like to write about this matter [&hellip;] but I am disturbed about it. They are pushing and crowding and competing with each other, and with everyone else. They will try the case I guess.
 				</p>
+				<small><a href="/bibliography/index.html#Dodd"><i>Ibid</i></a>., pp. 135f.</small>
 			</blockquote>
 			<p>
 				Who had decided that it was appropriate to have dozens of Jews on the prosecution? Who believed that anything like 75% representation was acceptable, from a nation that had, at best, 2% Jews? And why?
@@ -235,8 +238,9 @@
 			</p>
 			<blockquote>
 				<p>
-					The Tribunal shall not be bound by technical rules of evidence. It shall adopt and apply to the greatest possible extent expeditious and non-technical procedure, and shall admit any evidence which it deems to have probative value.</q> (<a href="/bibliography/index.html#IMT"><i>IMT</i></a>, Vol. 1, p. 15)
+					The Tribunal shall not be bound by technical rules of evidence. It shall adopt and apply to the greatest possible extent expeditious and non-technical procedure, and shall admit any evidence which it deems to have probative value.
 				</p>
+				<small><a href="/bibliography/index.html#IMT"><i>IMT</i></a>, Vol. 1, p. 15</small>
 			</blockquote>
 			<p>
 				In other words, testimony did not have to be confirmed with material or forensic evidence. The IMT could accept virtually any statement as fact: opinion, hearsay, rumor, inference, belief. The top priority was <q>expeditiousness.</q>
@@ -246,8 +250,9 @@
 			</p>
 			<blockquote>
 				<p>
-					The Tribunal shall not require proof of facts of common knowledge, but shall take judicial notice thereof. It shall also take judicial notice of official governmental documents and reports of the United Nations, including the acts and documents of the committees set up in the various Allied countries for the investigation of war crimes, and the records and findings of military or other Tribunals of any of the United Nations.</q> (<a href="/bibliography/index.html#IMT"><i>Ibid</i></a>.)
+					The Tribunal shall not require proof of facts of common knowledge, but shall take judicial notice thereof. It shall also take judicial notice of official governmental documents and reports of the United Nations, including the acts and documents of the committees set up in the various Allied countries for the investigation of war crimes, and the records and findings of military or other Tribunals of any of the United Nations.
 				</p>
+				<small><a href="/bibliography/index.html#IMT"><i>Ibid</i></a>.</small>
 			</blockquote>
 			<p>
 				This <q>common knowledge</q> included any alleged <q>fact</q> established by any authority or commission of any Allied country, whether in documents, verdicts, acts, reports, or other records. Once the court had taken judicial notice of something, it stood as an established fact and could not be challenged. If the defendant happened to disagree, he had no recourse.
@@ -277,8 +282,9 @@
 					I believe that most Americans view with discomfort the war trials which have just been concluded in Germany and are proceeding in Japan. They violate that fundamental principle of American law that a man cannot be tried under an ex post facto statute. The hanging of the 11 men convicted at Nuremberg will be a blot on the American record which we shall long regret.
 				</p>
 				<p>
-					The trial of the vanquished by the victors cannot be impartial, no matter how it is hedged about with the forms of justice. I question whether the hanging of those who, however despicable, were the leaders of the German people, will ever discourage the making of aggressive war, for no one makes aggressive war unless he expects to win. About this whole judgment there is the spirit of vengeance, and vengeance is seldom justice.</q> (<a href="/bibliography/index.html#Taft">Taft 2003</a>, p. 200)
+					The trial of the vanquished by the victors cannot be impartial, no matter how it is hedged about with the forms of justice. I question whether the hanging of those who, however despicable, were the leaders of the German people, will ever discourage the making of aggressive war, for no one makes aggressive war unless he expects to win. About this whole judgment there is the spirit of vengeance, and vengeance is seldom justice.
 				</p>
+				<small><a href="/bibliography/index.html#Taft">Taft 2003</a>, p. 200</small>
 			</blockquote>
 			<p>
 				Overall, The IMT was a highly flawed and tendentious mock trial aimed not at truth or justice but at revenge, punishment and ideological hegemony.
