--- a/plans-orders/resettlement/index.html
+++ b/plans-orders/resettlement/index.html
@@ -107,7 +107,7 @@
 				But this is where they are wrong. Sifting systematically through a plethora of wartime sources, Swedish historian Thomas Kues managed to find a long string of documents and media reports from during the war, demonstrating that thousands upon thousands of Jews were indeed deported to the temporarily German-occupied eastern territories. These sources are neatly listed and explained in the following publications, freely accessible to anyone who cares to look:
 			</p>
 			<ul>
-				<li>Kues, <q>Evidence for the Presence of &lsquo;Gassed&rsquo; Jews in the Occupied Eastern Territories,</q> Parts 1 through 3,</q> <a href="/bibliography/index.html#Kues2010a">2010a</a>&amp;<a href="/bibliography/index.html#Kues2010b">b</a>, <a href="/bibliography/index.html#Kues2011c">2011c</a>.</li>
+				<li>Kues, <q>Evidence for the Presence of &lsquo;Gassed&rsquo; Jews in the Occupied Eastern Territories, Parts 1 through 3,</q> <a href="/bibliography/index.html#Kues2010a">2010a</a>&amp;<a href="/bibliography/index.html#Kues2010b">b</a>, <a href="/bibliography/index.html#Kues2011c">2011c</a>.</li>
 				<li><a href="/bibliography/index.html#Graf_Kues">Graf/Kues/Mattogno 2020</a>, pp. 291-374.</li>
 				<li><a href="/bibliography/index.html#Mattogno_Kues">Mattogno/Kues/Graf 2015</a>, Part 1, pp. 561-703.</li>
 			</ul>
