--- a/plans-orders/wartime-leader/hitler-adolf/index.html
+++ b/plans-orders/wartime-leader/hitler-adolf/index.html
@@ -36,8 +36,9 @@
 			</p>
 			<blockquote>
 				<p>
-					In defending myself against the Jew, I am fighting for the work of the Lord.</q> (Vol. 1, 2.27)
+					In defending myself against the Jew, I am fighting for the work of the Lord.
 				</p>
+				<small>Vol. 1, 2.27</small>
 			</blockquote>
 			<p>
 				This evidently referred to passages in the New Testament, according to which Jesus made critical remarks about the Jewish political, religious and financial elite of his time. (See Matthew 12:34, 23:33, 27:25; Luke 16:14; John 8:44)
