--- a/absurdities/exaggerated-death-tolls/index.html
+++ b/absurdities/exaggerated-death-tolls/index.html
@@ -71,247 +71,88 @@
 							Today
 						</p>
 						</th>
-					</tr></thead><tbody>
+					</tr>
+				</thead>
+				<tbody>
 					<tr>
-						<td>
-
-							<a href="/a/auschwitz/index.html">Auschwitz</a>
-												</td>
-						<td>
-
-							4 to 8 million
-												</td>
-						<td>
-
-							1 million
-												</td>
-						<td>
-
-							4 to 8
-												</td>
-						<td>
-
-							135,500
-												</td>
-						<td>
-
-							30-60
-												</td>
+						<td> <a href="/a/auschwitz/index.html">Auschwitz</a> </td>
+						<td> 4 to 8 million </td>
+						<td> 1 million </td>
+						<td> 4 to 8 </td>
+						<td> 135,500 </td>
+						<td> 30-60 </td>
 					</tr>
 					<tr>
-						<td>
-
-							<a href="/instruments/camp/pure-extermination-camp/belzec/index.html"><span lang="en-US">Bełżec</span></a>
-												</td>
-						<td>
-
-							3 million
-												</td>
-						<td>
-
-							600,000
-												</td>
-						<td>
-
-							5
-												</td>
-						<td>
-
-							&lt;100,000*
-												</td>
-						<td>
-
-							&gt;30
-												</td>
+						<td> <a href="/instruments/camp/pure-extermination-camp/belzec/index.html">Bełżec</a> </td>
+						<td> 3 million </td>
+						<td> 600,000 </td>
+						<td> 5 </td>
+						<td> &lt;100,000* </td>
+						<td> &gt;30 </td>
 					</tr>
 					<tr>
-						<td>
-
-							<a href="/instruments/camp/pure-extermination-camp/chelmno/index.html"><span lang="en-US">Chełmno</span></a>
-												</td>
-						<td>
-
-							1.3 million
-												</td>
-						<td>
-
-							150,000
-												</td>
-						<td>
-
-							9
-												</td>
-						<td>
-
-							&lt;1,000‡
-												</td>
-						<td>
-
-							1,300
-												</td>
+						<td> <a href="/instruments/camp/pure-extermination-camp/chelmno/index.html">Chełmno</a> </td>
+						<td> 1.3 million </td>
+						<td> 150,000 </td>
+						<td> 9 </td>
+						<td> &lt;1,000‡ </td>
+						<td> 1,300 </td>
 					</tr>
 					<tr>
-						<td>
-
-							<a href="/instruments/camp/mixed-purpose-camp/dachau/index.html"><span lang="en-US">Dachau</span></a>
-												</td>
-						<td>
-
-							238,000
-												</td>
-						<td>
-
-							41,000
-												</td>
-						<td>
-
-							6
-												</td>
-						<td>
-
-							27,800
-												</td>
-						<td>
-
-							9
-												</td>
+						<td> <a href="/instruments/camp/mixed-purpose-camp/dachau/index.html">Dachau</a> </td>
+						<td> 238,000 </td>
+						<td> 41,000 </td>
+						<td> 6 </td>
+						<td> 27,800 </td>
+						<td> 9 </td>
 					</tr>
 					<tr>
-						<td>
-
-							<a href="/instruments/camp/majdanek/index.html"><span lang="en-US">Majdanek</span></a>
-												</td>
-						<td>
-
-							2 million
-												</td>
-						<td>
-
-							78,000
-												</td>
-						<td>
-
-							26
-												</td>
-						<td>
-
-							42,200
-												</td>
-						<td>
-
-							47
-												</td>
+						<td> <a href="/instruments/camp/majdanek/index.html">Majdanek</a> </td>
+						<td> 2 million </td>
+						<td> 78,000 </td>
+						<td> 26 </td>
+						<td> 42,200 </td>
+						<td> 47 </td>
 					</tr>
 					<tr>
-						<td>
-
-							<a href="/instruments/camp/mauthausen/index.html"><span lang="en-US">Mauthausen</span></a>
-												</td>
-						<td>
-
-							1 million
-												</td>
-						<td>
-
-							100,000
-												</td>
-						<td>
-
-							10
-												</td>
-						<td>
-
-							86,200
-												</td>
-						<td>
-
-							12
-												</td>
+						<td> <a href="/instruments/camp/mauthausen/index.html">Mauthausen</a> </td>
+						<td> 1 million </td>
+						<td> 100,000 </td>
+						<td> 10 </td>
+						<td> 86,200 </td>
+						<td> 12 </td>
 					</tr>
 					<tr>
-						<td>
-
-							<a href="/instruments/camp/mixed-purpose-camp/sachsenhausen/index.html"><span lang="en-US">Sachsenhausen</span></a>
-												</td>
-						<td>
-
-							840,000+
-												</td>
-						<td>
-
-							30,000
-												</td>
-						<td>
-
-							28
-												</td>
-						<td>
-
-							20,600
-												</td>
-						<td>
-
-							41
-												</td>
+						<td> <a href="/instruments/camp/mixed-purpose-camp/sachsenhausen/index.html">Sachsenhausen</a> </td>
+						<td> 840,000+ </td>
+						<td> 30,000 </td>
+						<td> 28 </td>
+						<td> 20,600 </td>
+						<td> 41 </td>
 					</tr>
 					<tr>
-						<td>
-
-							<a href="/locations/camps/sobibor/index.html"><span lang="en-US">Sobibó</span><span lang="en-US">r</span></a>
-												</td>
-						<td>
-
-							2 million
-												</td>
-						<td>
-
-							200,000
-												</td>
-						<td>
-
-							10
-												</td>
-						<td>
-
-							80,000+†
-												</td>
-						<td>
-
-							±25
-												</td>
+						<td> <a href="/locations/camps/sobibor/index.html">Sobibór</a> </td>
+						<td> 2 million </td>
+						<td> 200,000 </td>
+						<td> 10 </td>
+						<td> 80,000+† </td>
+						<td> ±25 </td>
 					</tr>
 					<tr>
-						<td>
-
-							<a href="/instruments/camp/pure-extermination-camp/treblinka/index.html"><span lang="en-US">Treblinka</span></a>
-												</td>
-						<td>
-
-							3 million
-												</td>
-						<td>
-
-							800,000
-												</td>
-						<td>
-
-							4
-												</td>
-						<td>
-
-							&lt;143,000*
-												</td>
-						<td>
-
-							&gt;21
-												</td>
-					</tr></tbody><tfoot>
-					<tr>
-						<td colspan="6">
-						<p>
-							* based on disturbed soil volume found; † enough disturbed soil volume was found to accommodate the claimed 80,000 buried victims, but more are said to have been killed later without being buried; however, tracelessly burning those bodies would have been nearly impossible with the means and the time at the camp&rsquo;s disposal; the latter is also true for Belzec and Treblinka; ‡ based on number of trees felled in the camp&rsquo;s vicinity. If taking this as a measure, the numbers for Belzec, Sobibór and Treblinka would be quite similar to Chełmno&rsquo;s numbers.
-												</td>
+						<td> <a href="/instruments/camp/pure-extermination-camp/treblinka/index.html">Treblinka</a> </td>
+						<td> 3 million </td>
+						<td> 800,000 </td>
+						<td> 4 </td>
+						<td> &lt;143,000* </td>
+						<td> &gt;21 </td>
 					</tr>
+				</tbody>
+				<tfoot>
+				<tr>
+					<td colspan="6">
+					<p>
+						* based on disturbed soil volume found; † enough disturbed soil volume was found to accommodate the claimed 80,000 buried victims, but more are said to have been killed later without being buried; however, tracelessly burning those bodies would have been nearly impossible with the means and the time at the camp&rsquo;s disposal; the latter is also true for Belzec and Treblinka; ‡ based on number of trees felled in the camp&rsquo;s vicinity. If taking this as a measure, the numbers for Belzec, Sobibór and Treblinka would be quite similar to Chełmno&rsquo;s numbers. </td>
+				</tr>
 				</tfoot>
 			</table>
 			<p>
@@ -335,7 +176,7 @@
 			<p>
 				(For details, see the entries for each of the camps listed; for an overview of the various camps, see <a href="/bibliography/index.html#Dalton2020">Dalton 2020</a>.; for death-toll claims of other claimed crime locations and events, see their respective entry.)
 			</p>
-			<!-- #bbinclude "footer.incl" -->
+<!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
 
