--- a/h/index.html
+++ b/h/index.html
@@ -19,254 +19,41 @@
 			<h2>
 				H
 			</h2>
-
-			<h3>
-				<a href="/plans-orders/emigration/index.html">Haavara Agreement &rarr; Emigration</a>
-			</h3>
-			<p>
-				Haavara Agreement &rarr; Emigration /
-			</p>
-			<p>
-				<a href="/plans-orders/emigration/index.html">Read More<span> Haavara Agreement &rarr; Emigration</span>&rarr; </a>
-			</p>
-
-			<h3>
-				<a href="/witnesses/perpetrator/hahle-johannes/index.html">Hähle, Johannes</a>
-			</h3>
-			<p>
-				Various photographs presumably taken by Johannes Hähle at Kiev between 29 September and 1 October 1941. Johannes Hähle is said to have been a German military photographer with the 637th Propaganda Company of the German Sixth Army. Between 29 September and 1 October 1941, a series of photographs were taken in Kiev, which are attributed &hellip;
-			</p>
-			<p>
-				<a href="/witnesses/perpetrator/hahle-johannes/index.html">Read More<span> Hähle, Johannes</span>&rarr; </a>
-			</p>
-
-			<h3>
-				<a href="/objects/hair-of-deportees/index.html">Hair of Deportees</a>
-			</h3>
-			<p>
-				During the Second World War, all inmates admitted to any kind of camp of the Third Reich had to have their hair shorn and kept trim during the entire time of their incarceration. Exceptions were granted only in special cases. This is graphically demonstrated by the so-called Auschwitz Album showing shorn male and female inmates &hellip;
-			</p>
-			<p>
-				<a href="/objects/hair-of-deportees/index.html">Read More<span> Hair of Deportees</span>&rarr; </a>
-			</p>
-
-			<h3>
-				<a href="/witnesses/victim/hanel-salomea/index.html">Hanel, Salomea</a>
-			</h3>
-			<p>
-				Salomea Hanel was an inmate of the Sobibór Camp. In a deposition published in 1945, she claimed that chlorine was the gas used at Sobibór in <q>the chamber</q> to kill inmates. This claim is rejected as false by the orthodoxy, who insists on several gas chambers and on an engine producing lethal exhaust gas. (See &hellip;
-			</p>
-			<p>
-				<a href="/witnesses/victim/hanel-salomea/index.html">Read More<span> Hanel, Salomea</span>&rarr; </a>
-			</p>
-
-			<h3>
-				<a href="/locations/other-crime-scene/hartheim/index.html">Hartheim</a>
-			</h3>
-			<p>
-				Hartheim Castle some 8 miles west of Linz, Austria, was one of National-Socialist Germany&rsquo;s euthanasia centers. It entered the Holocaust stage with two affidavits containing claims attributed to Franz Ziereis, the former commandant of the Mauthausen Camp. Both affidavits are written by former Mauthausen inmates, one of them by Hans Maršálek. Both contain the claim &hellip;
-			</p>
-			<p>
-				<a href="/locations/other-crime-scene/hartheim/index.html">Read More<span> Hartheim</span>&rarr; </a>
-			</p>
-
-			<h3>
-				<a href="/witnesses/perpetrator/hassler-johann/index.html">Hassler, Johann</a>
-			</h3>
-			<p>
-				Johann Hassler, SS Unterscharführer, testified some 16 years after the war that he once operated a gas van for the Einsatzgruppen near Minsk. The vehicle he drove had a complex system of piping exhaust gases into the cargo box: to the exhaust pipe, a <q>connecting piece with a thread</q> had been added, onto which &hellip;
-			</p>
-			<p>
-				<a href="/witnesses/perpetrator/hassler-johann/index.html">Read More<span> Hassler, Johann</span>&rarr; </a>
-			</p>
-
-			<h3>
-				<a href="/concepts/healthcare/index.html">Healthcare</a>
-			</h3>
-			<p>
-				Healthcare provided by the SS in German concentration camps is said to have been of very low quality, if it existed at all. Inmates too sick or injured to be cured quickly are said to have been killed in order to get rid of <q>useless eaters.</q> But like so many aspects of the orthodox Holocaust &hellip;
-			</p>
-			<p>
-				<a href="/concepts/healthcare/index.html">Read More<span> Healthcare</span>&rarr; </a>
-			</p>
-
-			<h3>
-				<a href="/witnesses/victim/henocque-georges/index.html">Hénocque, Georges</a>
-			</h3>
-			<p>
-				Georges Hénocque (13 Oct. 1870 &mdash; 23 March 1959) was a French priest and member of the resistance. As such, he was eventually caught by German occupational forces and deported to the Buchenwald Camp. In his 1947 book Les Antres de la Bête (The Caves of the Beast), he described in detail the alleged homicidal &hellip;
-			</p>
-			<p>
-				<a href="/witnesses/victim/henocque-georges/index.html">Read More<span> Hénocque, Georges</span>&rarr; </a>
-			</p>
-
-			<h3>
-				<a href="/witnesses/victim/herman-chaim/index.html">Herman, Chaim</a>
-			</h3>
-			<p>
-				Chaim Herman was a Jew deported from Drancy, France, to Auschwitz, where he arrived on 4 March 1943 and was assigned inmate number 106113. He is said to have written a secret letter hidden in a bottle that poked out of a pile of ashes at the railway siding near the crematoria ruins at the &hellip;
-			</p>
-			<p>
-				<a href="/witnesses/victim/herman-chaim/index.html">Read More<span> Herman, Chaim</span>&rarr; </a>
-			</p>
-
-			<h3>
-				<a href="/persons/heydrich-reinhardt/index.html">Heydrich, Reinhardt</a>
-			</h3>
-			<p>
-				Reinhardt Heydrich (7 March 1904 &mdash; 4 June 1942), SS Obergruppenführer, has been the head of the National-Socialist Party&rsquo;s Security Services (Sicherheitsdienst) since its inception in 1931. As Heinrich Himmler&rsquo;s deputy, he was head of the Security Police and the Security Services, which were merged in 1939 into Germany&rsquo;s equivalent of the Department of Homeland &hellip;
-			</p>
-			<p>
-				<a href="/persons/heydrich-reinhardt/index.html">Read More<span> Heydrich, Reinhardt</span>&rarr; </a>
-			</p>
-
-			<h3>
-				<a href="/events/himmler-speeches/index.html">Himmler Speeches</a>
-			</h3>
-			<p>
-				Heinrich Himmler, chief of the Third Reich&rsquo;s SS and police forces, had an obsession with delivering endless speeches. Many if not most of his speeches were delivered in front of non-public audiences usually consisting of high-profile personalities of politics and military. The topics Himmler covered reach from the mundane to the top secret. Surprisingly, many &hellip;
-			</p>
-			<p>
-				<a href="/events/himmler-speeches/index.html">Read More<span> Himmler Speeches</span>&rarr; </a>
-			</p>
-
-			<h3>
-				<a href="/events/himmler-visits/index.html">Himmler Visits</a>
-			</h3>
-			<p>
-				Himmler&rsquo;s service calendar proves that he visited Auschwitz on 17 and 18 July 1942, in order to follow up on the implementation of plans to expand the Birkenau Camp. The orthodoxy claims that, on this occasion, Himmler attended the gassing of a transport of Jews. However, Himmler&rsquo;s service calendar, showing that he was busy doing &hellip;
-			</p>
-			<p>
-				<a href="/events/himmler-visits/index.html">Read More<span> Himmler Visits</span>&rarr; </a>
-			</p>
-
-			<h3>
-				<a href="/persons/himmler-heinrich/index.html">Himmler, Heinrich</a>
-			</h3>
-			<p>
-				Heinrich Himmler (7 Oct. 1900 &mdash; 23 May 1945) was Reichsführer SS, meaning national leader of the SS, and head of the German police. As such, he gave the orders to his subordinates as to what to do with the Jews within Germany&rsquo;s reach: He ordered the police to arrest them; to deport them; to &hellip;
-			</p>
-			<p>
-				<a href="/persons/himmler-heinrich/index.html">Read More<span> Himmler, Heinrich</span>&rarr; </a>
-			</p>
-
-			<h3>
-				<a href="/witnesses/victim/hirszman-chaim/index.html">Hirszman, Chaim</a>
-			</h3>
-			<p>
-				Chaim Hirszman was a Polish Jew presumably deported to the Belzec Camp in September 1942, where he stayed until the camp was dissolved. On 19 March 1946, he made a deposition about his alleged experiences there in front of a Jewish historical commission. His text is very short and merely claims that deportees were killed &hellip;
-			</p>
-			<p>
-				<a href="/witnesses/victim/hirszman-chaim/index.html">Read More<span> Hirszman, Chaim</span>&rarr; </a>
-			</p>
-
-			<h3>
-				<a href="/witnesses/false-witness/hirt-joseph/index.html">Hirt, Joseph</a>
-			</h3>
-			<p>
-				Joseph Hirt (born 1925) was a school psychologist at Chester County, Pennsylvania, until his retirement in 1993. Starting in 2001, he gave hundreds of presentations at churches, schools and other organizations about his alleged experiences during the war as an Auschwitz inmate. After attending one of Hirt&rsquo;s presentations in April of 2016, history teacher Andrew &hellip;
-			</p>
-			<p>
-				<a href="/witnesses/false-witness/hirt-joseph/index.html">Read More<span> Hirt, Joseph</span>&rarr; </a>
-			</p>
-
-			<h3>
-				<a href="/documents/hitler-order-final-solution/index.html">Hitler Order, Final Solution</a>
-			</h3>
-			<p>
-				The former commandant of the Auschwitz Camp Rudolf Höss, after having been coerced to sign various absurd <q>confessions</q> dictated to him by the British after severe torture, testified on 15 April 1946 at the Nuremberg International Military Tribunal. Among other things, he claimed that Heinrich Himmler had told him in the summer of 1941 about &hellip;
-			</p>
-			<p>
-				<a href="/documents/hitler-order-final-solution/index.html">Read More<span> Hitler Order, Final Solution</span>&rarr; </a>
-			</p>
-
-			<h3>
-				<a href="/persons/hitler-adolf/index.html">Hitler, Adolf</a>
-			</h3>
-			<p>
-				Adolf Hitler (20 April 1889 &mdash; 30 April 1945) is the central figure in the Holocaust narrative. Considering the monolithic nature of Hitler&rsquo;s dictatorship, his decisions, orders and decrees are what should have caused, started and shaped the progress of the Holocaust. Yet when we look at the historical records, all we have are some &hellip;
-			</p>
-			<p>
-				<a href="/persons/hitler-adolf/index.html">Read More<span> Hitler, Adolf</span>&rarr; </a>
-			</p>
-
-			<h3>
-				<a href="/witnesses/perpetrator/hofer-fritz/index.html">Höfer, Fritz</a>
-			</h3>
-			<p>
-				During the war, Fritz Höfer was a truck driver for German units. On 27 August 1959, he testified during West-German investigations on the alleged mass shooting of Kiev Jews at Babi Yar. He claims to have driven a truck to the ravine in order to get loaded up with items left behind by the Jews &hellip;
-			</p>
-			<p>
-				<a href="/witnesses/perpetrator/hofer-fritz/index.html">Read More<span> Höfer, Fritz</span>&rarr; </a>
-			</p>
-
-			<h3>
-				<a href="/documents/hofle-hans/index.html">Höfle, Hans</a>
-			</h3>
-			<p>
-				Hans Höfle (19 June 1911 &mdash; 21 Aug. 1962), SS Sturmbannführer, was Odilo Globocnik&rsquo;s deputy chief of staff. As delegate for Jewish resettlement in the Lublin District, he was deeply involved within the Aktion Reinhardt in organizing the deportation of Jews from German-occupied Poland to the Majdanek Camp and through the camps at Belzec, Sobibór, &hellip;
-			</p>
-			<p>
-				<a href="/documents/hofle-hans/index.html">Read More<span> Höfle, Hans</span>&rarr; </a>
-			</p>
-
-			<h3>
-				<a href="/witnesses/perpetrator/hofmann-ernst/index.html">Hofmann, Ernst</a>
-			</h3>
-			<p>
-				Ernst Hofmann was an SS man deployed at the Auschwitz Camp. During the deportation of Jews from Hungary to the Auschwitz-Birkenau Camp in the spring of 1944, he was tasked by the camp&rsquo;s administration to document the arrival and processing of these deportees. Hence, on 26 May 1944, Hofmann and his colleague Bernhard Walter took &hellip;
-			</p>
-			<p>
-				<a href="/witnesses/perpetrator/hofmann-ernst/index.html">Read More<span> Hofmann, Ernst</span>&rarr; </a>
-			</p>
-
-			<h3>
-				<a href="/concepts/holocaust-indoctrination/index.html">Holocaust Indoctrination</a>
-			</h3>
-			<p>
-				School Education Many genocides were committed during the history of mankind. The worst of recorded history is probably the auto-genocide perpetrated in Cambodia by the Khmer Rouge between 1975 and 1979. Up to a third of the entire Cambodian population is said to have been slaughtered during that time. In absolute death-toll figures, the genocide &hellip;
-			</p>
-			<p>
-				<a href="/concepts/holocaust-indoctrination/index.html">Read More<span> Holocaust Indoctrination</span>&rarr; </a>
-			</p>
-
-			<h3>
-				<a href="/concepts/holocaust-skepticism-revisionism/index.html">Holocaust Skepticism (Revisionism)</a>
-			</h3>
-			<p>
-				While many high-ranking German wartime officials claimed ignorance after the war about a National-Socialist extermination program of the Jews, Hermann Göring was the first person to express skepticism about the Holocaust narrative imposed upon the world by the prosecution during the Nuremberg International Military Tribunal (see the entry on him, and Heliotis 2018b). The next person &hellip;
-			</p>
-			<p>
-				<a href="/concepts/holocaust-skepticism-revisionism/index.html">Read More<span> Holocaust Skepticism (Revisionism)</span>&rarr; </a>
-			</p>
-
-			<h3>
-				<a href="/h/holocaust-the/index.html">Holocaust, the</a>
-			</h3>
-			<p>
-				The word holocaust originates from the two Greek words hólos (whole) and kaustós (burnt). It used to refer to a religious sacrifice whereby an animal carcass is completely consumed by fire (burnt offering). Starting in 1903, the term was occasionally used in articles of the New York Times referring to the persecution of Jews in &hellip;
-			</p>
-			<p>
-				<a href="/h/holocaust-the/index.html">Read More<span> Holocaust, the</span>&rarr; </a>
-			</p>
-
-			<h3>
-				<a href="/witnesses/false-witness/holstein-bernard/index.html">Holstein, Bernard</a>
-			</h3>
-			<p>
-				In 2004, the Australian writer Bernard Brougham, alias Bernard Holstein, published a book recounting his time at Auschwitz, titled Stolen Soul. It turns out that the book was a complete fraud. In October of that year, the publisher, University of Western Australia Press, discovered the many lies in it and pulled copies of the book &hellip;
-			</p>
-			<p>
-				<a href="/witnesses/false-witness/holstein-bernard/index.html">Read More<span> Holstein, Bernard</span>&rarr; </a>
-			</p>
-	<nav class="pagination">
-		<h3>
-			Page navigation
-		</h3>
-		<div>
-			1 <a href="page/2/index.html">2</a> <a href="page/2/index.html">Next Page &gt;</a>
-		</div>
-	</nav>
+			<div class="columns">
+				<ul>
+					<li><a href="/plans-orders/emigration/index.html">Haavara Agreement</a></li>
+					<li><a href="/witnesses/perpetrator/hahle-johannes/index.html">Hähle, Johannes</a></li>
+					<li><a href="/objects/hair-of-deportees/index.html">Hair of Deportees</a></li>
+					<li><a href="/witnesses/victim/hanel-salomea/index.html">Hanel, Salomea</a></li>
+					<li><a href="/locations/other-crime-scene/hartheim/index.html">Hartheim</a></li>
+					<li><a href="/witnesses/perpetrator/hassler-johann/index.html">Hassler, Johann</a></li>
+					<li><a href="/concepts/healthcare/index.html">Healthcare</a></li>
+					<li><a href="/witnesses/victim/henocque-georges/index.html">Hénocque, Georges</a></li>
+					<li><a href="/witnesses/victim/herman-chaim/index.html">Herman, Chaim</a></li>
+					<li><a href="/persons/heydrich-reinhardt/index.html">Heydrich, Reinhardt</a></li>
+					<li><a href="/events/himmler-speeches/index.html">Himmler Speeches</a></li>
+					<li><a href="/events/himmler-visits/index.html">Himmler Visits</a></li>
+					<li><a href="/persons/himmler-heinrich/index.html">Himmler, Heinrich</a></li>
+					<li><a href="/witnesses/victim/hirszman-chaim/index.html">Hirszman, Chaim</a></li>
+					<li><a href="/witnesses/false-witness/hirt-joseph/index.html">Hirt, Joseph</a></li>
+					<li><a href="/documents/hitler-order-final-solution/index.html">Hitler Order, Final Solution</a></li>
+					<li><a href="/persons/hitler-adolf/index.html">Hitler, Adolf</a></li>
+					<li><a href="/witnesses/perpetrator/hofer-fritz/index.html">Höfer, Fritz</a></li>
+					<li><a href="/documents/hofle-hans/index.html">Höfle, Hans</a></li>
+					<li><a href="/witnesses/perpetrator/hofmann-ernst/index.html">Hofmann, Ernst</a></li>
+					<li><a href="/concepts/holocaust-indoctrination/index.html">Holocaust Indoctrination</a></li>
+					<li><a href="/concepts/holocaust-skepticism-revisionism/index.html">Holocaust Skepticism (Revisionism)</a></li>
+					<li><a href="/h/holocaust-the/index.html">Holocaust, the</a></li>
+					<li><a href="/witnesses/false-witness/holstein-bernard/index.html">Holstein, Bernard</a></li>
+					<li><a href="/instruments/tool/homicidal-gas-chamber/index.html">Homicidal Gas Chamber</a></li>
+					<li><a href="/h/homosexuals/index.html">Homosexuals</a></li>
+					<li><a href="/witnesses/perpetrator/hoss-rudolf/index.html">Höss, Rudolf</a></li>
+					<li><a href="/persons/hossler-franz/index.html">Hössler, Franz</a></li>
+					<li><a href="/witnesses/perpetrator/hottl-wilhelm/index.html">Höttl, Wilhelm</a></li>
+					<li><a href="/locations/country/hungary/index.html">Hungary</a></li>
+					<li><a href="/toxins-chemicals/hydrogen-cyanide/index.html">Hydrogen Cyanide</a></li>
+				</ul>
+			</div>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
