--- a/v/index.html
+++ b/v/index.html
@@ -19,106 +19,18 @@
 			<h2>
 				V
 			</h2>
-
-			<h3>
-				<a href="/witnesses/victim/vaillant-couturier-marie-claude/index.html">Vaillant-Couturier, Marie-Claude</a>
-			</h3>
-			<p>
-				Marie-Claude Vaillant-Couturier (née Vogel; 3 Nov. 1912 &mdash; 11 Dec. 1996) was a communist member of the French resistance against the German occupation during World War II. She was arrested on 9 February 1942 by the French police, and on 24 January 1943 deported to Auschwitz&mdash;Birkenau. She arrived there three days later and was initially &hellip;
-			</p>
-			<p>
-				<a href="/witnesses/victim/vaillant-couturier-marie-claude/index.html">Read More<span> Vaillant-Couturier, Marie-Claude</span>&rarr; </a>
-			</p>
-
-			<h3>
-				<a href="/witnesses/victim/van-den-bergh-siegfried/index.html">van den Bergh, Siegfried</a>
-			</h3>
-			<p>
-				Siegfried van den Bergh was an Auschwitz inmate who, right after the war, wrote his war memoirs. Regarding mass murder at Auschwitz, he made the following peculiar claims: Poison gas was emitted into the gas chamber through showerheads. However, the product allegedly used at Auschwitz, Zyklon B, contains liquid hydrogen cyanide absorbed on gypsum pellets&hellip;.
-			</p>
-			<p>
-				<a href="/witnesses/victim/van-den-bergh-siegfried/index.html">Read More<span> van den Bergh, Siegfried</span>&rarr; </a>
-			</p>
-
-			<h3>
-				<a href="/v/van-herwaarden-maria/index.html">Van Herwaarden, Maria</a>
-			</h3>
-			<p>
-				Maria van Herwaarden was a young German woman who was incarcerated at Auschwitz and Birkenau from December 1942 to January 1945 for having had a sexual relationship with a Polish man. She testified as a witness for the defense during the Second Zündel Trial in Toronto in 1988. &hellip;
-			</p>
-			<p>
-				<a href="/v/van-herwaarden-maria/index.html">Read More<span> Van Herwaarden, Maria</span>&rarr; </a>
-			</p>
-
-			<h3>
-				<a href="/persons/politician/van-roden-edward-l/index.html">van Roden, Edward L.</a>
-			</h3>
-			<p>
-				Edward van Roden (1892-1973) was a Pennsylvania judge who served on a special postwar committee (The Simpson Commission) to investigate possible prisoner abuse and torture by Americans against captive Germans. Among the many war crimes of World War Two was the Malmedy Massacre of 17 December 1944. During the Battle of the Bulge, some 120 &hellip;
-			</p>
-			<p>
-				<a href="/persons/politician/van-roden-edward-l/index.html">Read More<span> van Roden, Edward L.</span>&rarr; </a>
-			</p>
-
-			<h3>
-				<a href="/persons/politician/veil-simone/index.html">Veil, Simone</a>
-			</h3>
-			<p>
-				Simone Jacob, whose last name changed to Veil after marrying, was a young Jewish woman from France who was deported to Auschwitz in April 1944. When Polish historian Danuta Czech wrote the first edition of her Auschwitz Chronicle, she reported that not a single woman of the transport with which Ms. Jacob arrived at Auschwitz &hellip;
-			</p>
-			<p>
-				<a href="/persons/politician/veil-simone/index.html">Read More<span> Veil, Simone</span>&rarr; </a>
-			</p>
-
-			<h3>
-				<a href="/witnesses/victim/venezia-morris/index.html">Venezia, Morris</a>
-			</h3>
-			<p>
-				Morris (Maurice) Venezia (25 Feb. 1921 &mdash; 2 Sept. 2013) was an Italian Jew deported from Greece to Auschwitz, where he arrived on 11 April 1944 together with his brother Shlomo Venezia, among others. In contrast to his brother, he never elaborated in public in great detail what he claimed to have experienced while at &hellip;
-			</p>
-			<p>
-				<a href="/witnesses/victim/venezia-morris/index.html">Read More<span> Venezia, Morris</span>&rarr; </a>
-			</p>
-
-			<h3>
-				<a href="/witnesses/victim/venezia-shlomo/index.html">Venezia, Shlomo</a>
-			</h3>
-			<p>
-				Shlomo Venezia (29 Dec. 1923 &mdash; 1 Oct. 2012) was an Italian Jew deported from Greece to Auschwitz, where he arrived on 11 April 1944 together with his brother Morris Venezia and five other notorious false witnesses: Josef Sackar, Yaakov Gabai, Shaul Chasan, Leon Cohen and Daniel Bennahmias. After three weeks of quarantine, Venezia was &hellip;
-			</p>
-			<p>
-				<a href="/witnesses/victim/venezia-shlomo/index.html">Read More<span> Venezia, Shlomo</span>&rarr; </a>
-			</p>
-
-			<h3>
-				<a href="/technologies/ventilation/index.html">Ventilation</a>
-			</h3>
-			<p>
-				Principles By <q>ventilating</q> an enclosed space, we refer here to replacing old, stale or contaminated air with fresh, uncontaminated air. In an ideal scenario of a cuboid space (room), fresh air would be pushed in along the entire surface area of one end of the room, and stale air would be taken out along the &hellip;
-			</p>
-			<p>
-				<a href="/technologies/ventilation/index.html">Read More<span> Ventilation</span>&rarr; </a>
-			</p>
-
-			<h3>
-				<a href="/persons/politician/voss-peter/index.html">Voss, Peter</a>
-			</h3>
-			<p>
-				Peter Voss, allegedly born on 18 December 1897 in Flensburg, Germany, is said to have been an SS Oberscharführer deployed at the Auschwitz Camp. However, there does not seem to exist any documentation about the presence or activity of a person with that name at that camp. Voss is mentioned (with spelling varieties) as a &hellip;
-			</p>
-			<p>
-				<a href="/persons/politician/voss-peter/index.html">Read More<span> Voss, Peter</span>&rarr; </a>
-			</p>
-
-			<h3>
-				<a href="/witnesses/victim/vrba-rudolf/index.html">Vrba, Rudolf</a>
-			</h3>
-			<p>
-				Rudolf Vrba (born as Walter Rosenberg, 11 Sept. 1924 &mdash; 27 March 2006) was a Slovakian Jew deported to the Majdanek Camp on 14 June 1942, and 16 days later, on 30 June, transferred to the Auschwitz Camp. Initially, he was employed at the inmate property warehouse of the Main Camp, sorting and registering the &hellip;
-			</p>
-			<p>
-				<a href="/witnesses/victim/vrba-rudolf/index.html">Read More<span> Vrba, Rudolf</span>&rarr; </a>
-			</p>
+			<ul>
+				<li><a href="/witnesses/victim/vaillant-couturier-marie-claude/index.html">Vaillant-Couturier, Marie-Claude</a></li>
+				<li><a href="/witnesses/victim/van-den-bergh-siegfried/index.html">van den Bergh, Siegfried</a></li>
+				<li><a href="/v/van-herwaarden-maria/index.html">Van Herwaarden, Maria</a></li>
+				<li><a href="/persons/politician/van-roden-edward-l/index.html">van Roden, Edward L.</a></li>
+				<li><a href="/persons/politician/veil-simone/index.html">Veil, Simone</a></li>
+				<li><a href="/witnesses/victim/venezia-morris/index.html">Venezia, Morris</a></li>
+				<li><a href="/witnesses/victim/venezia-shlomo/index.html">Venezia, Shlomo</a></li>
+				<li><a href="/technologies/ventilation/index.html">Ventilation</a></li>
+				<li><a href="/persons/politician/voss-peter/index.html">Voss, Peter</a></li>
+				<li><a href="/witnesses/victim/vrba-rudolf/index.html">Vrba, Rudolf</a></li>
+			</ul>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
