replace weird characters

--- a/instruments/camp/pure-extermination-camp/treblinka/index.html
+++ b/instruments/camp/pure-extermination-camp/treblinka/index.html
@@ -649,7 +649,7 @@
 				is the simple fact that Treblinka&rsquo;s extermination sector never existed.
 			</p>
 			<p>
-				(For more on Treblinka, see <a href="/bibliography/index.html#Mattogno_Graf">Mattogno/Graf 2023</a>; <a href="/bibliography/index.html#Mattogno2021e">Mattogno 2021e</a>; <a href="/bibliography/index.html#Mattogno_Kues">Mattogno/Kues/​​Graf 2015</a>.)
+				(For more on Treblinka, see <a href="/bibliography/index.html#Mattogno_Graf">Mattogno/Graf 2023</a>; <a href="/bibliography/index.html#Mattogno2021e">Mattogno 2021e</a>; <a href="/bibliography/index.html#Mattogno_Kues">Mattogno/Kues/Graf 2015</a>.)
 			</p>
 			<!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
