--- a/manipulation/propaganda/index.html
+++ b/manipulation/propaganda/index.html
@@ -279,7 +279,7 @@
 				The Soviet Union took advantage of this invitation to meddle in internal U.S. affairs by submitting to the OSI incriminating material, much of it based on false witness testimonies and forged documents. The Soviet Union targeted with this primarily immigrants in the U.S. with a Ukrainian background. The goal was to damage the reputation of nationalist Ukrainian groups and individuals by bringing them into context of National-Socialist atrocities. This was to undermine the legitimacy of the Ukrainian independence movement.
 			</p>
 			<p>
-				Hence, Ehrenburg&rsquo;s <i>Black Book</i> was finally published in 1981. A collection of <q>expert reports</q> by Burdenko and his ilk about alleged <i>Nazi Crimes in the Ukraine</i>(!) saw the light of day in 1987 (<a href="/bibliography/index.html#Denisov">Denisov/​Changuli</a>). It is no accident that this happened right around the time of the showdown in Israel of the OSI&rsquo;s most infamous witch-hunt victim, the Ukrainian John Demjanjuk.
+				Hence, Ehrenburg&rsquo;s <i>Black Book</i> was finally published in 1981. A collection of <q>expert reports</q> by Burdenko and his ilk about alleged <i>Nazi Crimes in the Ukraine</i>(!) saw the light of day in 1987 (<a href="/bibliography/index.html#Denisov">Denisov/Changuli</a>). It is no accident that this happened right around the time of the showdown in Israel of the OSI&rsquo;s most infamous witch-hunt victim, the Ukrainian John Demjanjuk.
 			</p>
 			<h4>
 				<a id="United"></a>United Kingdom
