--- a/persons/heydrich-reinhardt/index.html
+++ b/persons/heydrich-reinhardt/index.html
@@ -54,7 +54,7 @@
 				Heydrich&rsquo;s first name was probably the namesake for <q><a href="/a/aktion-reinhardt/index.html"><i>Aktion Reinhardt</i></a></q> &mdash; the vast program of expropriation and deportation of Jews for resettlement or forced-labor deployment. See the entry on <a href="/a/aktion-reinhardt/index.html"><i>Aktion Reinhardt</i></a> for details.
 			</p>
 			<p>
-				(For more details on Heydrich&rsquo;s role, see <a href="/bibliography/index.html#Graf_Kues">Graf/​Kues/Mattogno 2020</a>, pp. 201-225, 255f.)
+				(For more details on Heydrich&rsquo;s role, see <a href="/bibliography/index.html#Graf_Kues">Graf/Kues/Mattogno 2020</a>, pp. 201-225, 255f.)
 			</p>
 			<!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
