--- a/persons/propagandist/steiner-jean-francois/index.html
+++ b/persons/propagandist/steiner-jean-francois/index.html
@@ -42,7 +42,7 @@
 				</p>
 			</blockquote>
 			<p>
-				After a later change of mind, even one of the most dogmatic orthodox Holocaust scholars, the French Jew Pierre Vidal-Naquet, re-categorized Steiner&rsquo;s anti-German hate fest as <q>sub-literature</q> tending towards sadism. (For more details, see <a href="/bibliography/index.html#Mattogno_Graf">Mattogno/​Graf 2023</a>, pp. 27-29.)
+				After a later change of mind, even one of the most dogmatic orthodox Holocaust scholars, the French Jew Pierre Vidal-Naquet, re-categorized Steiner&rsquo;s anti-German hate fest as <q>sub-literature</q> tending towards sadism. (For more details, see <a href="/bibliography/index.html#Mattogno_Graf">Mattogno/Graf 2023</a>, pp. 27-29.)
 			</p>
 			<!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
