--- a/plans-orders/resettlement/index.html
+++ b/plans-orders/resettlement/index.html
@@ -72,7 +72,7 @@
 				</p>
 			</blockquote>
 			<p>
-				Hence, on Hitler&rsquo;s orders, emigration was replaced by evacuation/resettlement/​expulsion to the occupied territories in the East, but only as a temporary solution while awaiting a definitive solution of this issue after the war, something Hitler had asserted repeatedly.
+				Hence, on Hitler&rsquo;s orders, emigration was replaced by evacuation/resettlement/expulsion to the occupied territories in the East, but only as a temporary solution while awaiting a definitive solution of this issue after the war, something Hitler had asserted repeatedly.
 			</p>
 			<p>
 				The intention of the Third Reich leaders to <q>solve</q> the Jewish problem only after the war results also from many other documents, such as the so-called <q>Brown File</q> drafted by Rosenberg on 20 June 1941, which was later integrated into the <q>Green File</q> of September of 1942. We read there:
