--- a/instruments/tool/open-air-incinerations/index.html
+++ b/instruments/tool/open-air-incinerations/index.html
@@ -176,7 +176,7 @@
 				An average prisoner is rated at being able to cut some 0.63 metric tons of fresh wood per workday. This value can be used to calculate, how many inmate <a href="/technologies/lumberjacks/index.html">lumberjacks</a> it takes to cut a certain amount of wood within a given period of time. The entry on lumberjacks gives an overview of the firewood that would have been needed to burn the number of corpses alleged by witnesses, or by the orthodox narrative for various claimed Holocaust crime scenes. As an example, the next section discusses some claims made about outdoor cremations at the <a href="/camp/mixed-purpose-camp/auschwitz/index.html">Auschwitz Camp</a>.
 			</p>
 			<p>
-				(For details on open-air incinerations, see <a href="/bibliography/index.html#Mattogno2016b">Mattogno 2016b</a>, esp. pp. 60-63, 128-133; <a href="/bibliography/index.html#Graf_Kues">Graf/Kues/​Mattogno 2020</a>, pp. 138-157; <a href="/bibliography/index.html#Mattogno_Kues">Mattogno/Kues/Graf 2015</a>, pp. 1226-1328; <a href="/bibliography/index.html#Yerman">Yermán <i>et al</i>.</a>)
+				(For details on open-air incinerations, see <a href="/bibliography/index.html#Mattogno2016b">Mattogno 2016b</a>, esp. pp. 60-63, 128-133; <a href="/bibliography/index.html#Graf_Kues">Graf/Kues/Mattogno 2020</a>, pp. 138-157; <a href="/bibliography/index.html#Mattogno_Kues">Mattogno/Kues/Graf 2015</a>, pp. 1226-1328; <a href="/bibliography/index.html#Yerman">Yermán <i>et al</i>.</a>)
 			</p>
 			<h4>
 				<a id="Holocaust"></a>Holocaust Scenarios
