change CODOH links

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -26,7 +26,7 @@
 				The project www.HolocaustEncyclopedia.com and its related products (videos, audio book, eBook, print book) is implemented by the Academic Research Media Review Education Group LTD (ARG LTD). Any copyrights and trademarks deriving from products created with this project are owned by ARG LTD.
 			</p>
 			<p>
-				This project is moreover sponsored by the <a href="https://codoh.com">Committee for Open Debate on the Holocaust</a> (CODOH), and by a number of individuals and entities who value their privacy. Unless explicitly expressed in writing to us that sponsors wish to be publicly associated with this project, their identity will not be disclosed by us to anyone.
+				This project is moreover sponsored by the <a href="http://codoh.com">Committee for Open Debate on the Holocaust</a> (CODOH), and by a number of individuals and entities who value their privacy. Unless explicitly expressed in writing to us that sponsors wish to be publicly associated with this project, their identity will not be disclosed by us to anyone.
 			</p>
 			<h4>
 				The Team
