--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<li>If you want to purchase our Encyclopedia, go to our <a href="https://holocaustencyclopedia.com/product/holocaust-encyclopedia/">store</a>, where you can choose between a hardcover edition, a paperback edition, a text-only eBook version for downloading (PDF or ePub), and a downloadable eBook with text <i>and</i> audio files for all entries (ePub).</li>
 				<li>If you want to help us expand our Encyclopedia to cover additional topic, don&rsquo;t hesitate to get in touch using our <a href="https://holocaustencyclopedia.com/contact-us/">Contact Us</a> form. If you are looking for inspirations as to what could possibly be done to help us, please read our short essay on our <a href="https://holocaustencyclopedia.com/support-us/">Support Us</a> page, then consider whether any of it is within your means and abilities.</li>
 				<li>Our <a href="/change-log/index.html">Change Log</a> tracks the changes we have made since the first print edition of our Encyclopedia was released in December 2023.</li>
-				<li>Finally, if you want to support us financially in order to empower us, so we can continue and expand this educational outreach free of charge, please consider making a donation on our <a href="https://holocaustencyclopedia.com/support-us/index.html">Support Us</a> page.</li>
+				<li>Finally, if you want to support us financially in order to empower us, so we can continue and expand this educational outreach free of charge, please consider making a donation on our <a href="https://holocaustencyclopedia.com/support-us/">Support Us</a> page.</li>
 			</ul>
 			<h3>
 				Multi-Media Approach
