--- a/bibliography/index.html
+++ b/bibliography/index.html
@@ -294,7 +294,7 @@
 				<li><a id="Loftus2003"></a>Loftus, Elizabeth 2003. <q>Award for Distinguished Scientific Applications of Psychology,</q> <i>American Psychologist,</i> Vol. 58, No. 11, 2003, pp. 864-873.</li>
 				<li><a id="Longerich"></a>Longerich, Peter. <i>Holocaust: The Nazi Persecution and Murder of the Jews,</i> Oxford University Press, Oxford, 2010.</li>
 				<li><a id="Luftl2003"></a>Lüftl, Walter 2003 (as Werner Rademacher). <q><a href="http://codoh.com/library/document/engineers-deathbed-confession-we-built-morgues/">Engineer&rsquo;s Deathbed Confession: We Built Morgues, not Gas Chambers</a>,</q> <i>The Revisionist,</i> Vol. 2, No. 3, 2003, pp. 296f.; <a href="http://codoh.com/library/document/engineers-deathbed-confession-we-built-morgues/">codoh.com/library/documents/engineers-deathbed-confession-we-built-morgues/</a>.</li>
-				<li><a id="Luftl2004"></a>Lüftl, Walter 2004. <q><a href="http://codoh.com/library/document/a-somewhat-different-auschwitz-trial/">1972: A Somewhat Different Auschwitz Trial</a>,</q> <i>The Revisionist,</i> Vol. 2, No. 3, 2004, pp. 294f.; <a href="http://codoh.com/library/document/a-somewhat-different-auschwitz-trial/">codoh.com/library/documents/a-somewhat-different-auschwitz-trial/</a>.</li>
+				<li><a id="Luftl2004"></a>Lüftl, Walter 2004. <q><a href="https://codoh.com/library/document/a-somewhat-different-auschwitz-trial/">1972: A Somewhat Different Auschwitz Trial</a>,</q> <i>The Revisionist,</i> Vol. 2, No. 3, 2004, pp. 294f.; <a href="https://codoh.com/library/document/a-somewhat-different-auschwitz-trial/">codoh.com/library/document/a-somewhat-different-auschwitz-trial/</a>.</li>
 			</ul>
 			<h3>
 				M
