--- a/change-log/index.html
+++ b/change-log/index.html
@@ -548,7 +548,7 @@
 					</tr>
 					<tr>
 						<td>codoh.com/library/documents/a-somewhat-different-auschwitz-trial/en/</td>
-						<td><a href="http://codoh.com/library/document/a-somewhat-different-auschwitz-trial/">codoh.com/library/documents/a-somewhat-different-auschwitz-trial/</a></td>
+						<td><a href="https://codoh.com/library/document/a-somewhat-different-auschwitz-trial/">codoh.com/library/documents/a-somewhat-different-auschwitz-trial/</a></td>
 					</tr>
 					<tr>
 						<td>codoh.com/library/documents/aspects-of-biological-warfare-during-world-war-ii/en/</td>
