--- a/objects/swimming-pool/index.html
+++ b/objects/swimming-pool/index.html
@@ -43,7 +43,7 @@
 				Another issue is the alleged creation of the pool in <q>early 1944.</q> We recall that the camp was opened in May 1940. By 1944, it allegedly had been operating mass-gassing facilities for two full years. It seems very odd that camp managers saw the need for a fire reservoir for camouflage purposes only in <q>early 1944.</q>
 			</p>
 			<p>
-				Worse still, there was a 2007 film made about the pool, called <i>Swimming in Auschwitz,</i> telling the story of six teenage Jewesses at the camp (incredibly, they all survived). For them, the pool was clearly&hellip; <i>a swimming pool</i>. Here is a quotation from the <a href="https://aptww.org/programs/70398/swimming-in-auschwitz">film&rsquo;s website</a>:
+				Worse still, there was a 2007 film made about the pool, called <i>Swimming in Auschwitz,</i> telling the story of six teenage Jewesses at the camp (incredibly, they all survived). For them, the pool was clearly &hellip; <i>a swimming pool.</i> Here is a quotation from the <a href="https://aptww.org/programs/70398/swimming-in-auschwitz">film&rsquo;s website</a>:
 			</p>
 			<blockquote>
 				<p>
