truncate CODOH links

--- a/instruments/camp/concentration-camps/index.html
+++ b/instruments/camp/concentration-camps/index.html
@@ -38,7 +38,7 @@
 				In this encyclopedia, concentration camps are discussed only if any kind of extermination activity against Jews or against all inmates, irrespective of creed or ethnicity, has been claimed in them. This includes (see the respective entry, and also the entry on <a href="/extermination-camps/index.html">extermination camps</a>):
 			</p>
 			<ul>
-				<li><a href="/mixed-purpose-camp/auschwitz/index.html">Auschwitz</a></li>
+				<li><a href="/a/auschwitz/index.html">Auschwitz</a></li>
 				<li><a href="/other-camp/bergen-belsen/index.html">Bergen-Belsen</a></li>
 				<li><a href="/b/buchenwald/index.html">Buchenwald</a></li>
 				<li><a href="/mixed-purpose-camp/dachau/index.html">Dachau</a></li>
