--- a/instruments/camp/extermination-camps/index.html
+++ b/instruments/camp/extermination-camps/index.html
@@ -34,7 +34,7 @@
 				The table lists extermination camps claimed by orthodox historians, plus those only by witnesses, opposing learned mainstream opinion. Of these, the majority of alleged deaths by all causes, according to the current orthodox narrative, occurred in just six camps:
 			</p>
 			<ul>
-				<li><a href="/mixed-purpose-camp/auschwitz/index.html">Auschwitz</a> &mdash; ca. 1,000,000 victims.</li>
+				<li><a href="/a/auschwitz/index.html">Auschwitz</a> &mdash; ca. 1,000,000 victims.</li>
 				<li><a href="/pure-extermination-camp/treblinka/index.html">Treblinka</a> &mdash; ca. 800,000 victims.</li>
 				<li><a href="/pure-extermination-camp/belzec/index.html">Belzec</a> &mdash; ca. 434,000 victims.</li>
 				<li><a href="/locations/camps/sobibor/index.html">Sobibór</a> &mdash; ca. 200,000 victims.</li>
@@ -54,7 +54,7 @@
 				</thead>
 <tbody>
 					<tr>
-						<td><a href="/mixed-purpose-camp/auschwitz/index.html">Auschwitz</a></td>
+						<td><a href="/a/auschwitz/index.html">Auschwitz</a></td>
 						<td>
 
 							mixed/main
