--- a/instruments/camp/monowitz/index.html
+++ b/instruments/camp/monowitz/index.html
@@ -32,7 +32,7 @@
 				</figcaption>
 			</figure>
 			<p>
-				The nearby <a href="/mixed-purpose-camp/auschwitz/index.html">Auschwitz Camp</a> was to provide some of its inmates as slave laborers for the construction and eventual operation of this chemical factory. To this end, the SS authorities established a labor camp right next to the chemical plant, which was also called Auschwitz-Monowitz. On 22 November 1943, all satellite camps near Auschwitz were separated from the Auschwitz Main Camp and became an independent concentration camp called Auschwitz III, with the headquarters at the Monowitz Camp. On 25 November 1944, the name was changed to Monowitz Concentration Camp.
+				The nearby <a href="/a/auschwitz/index.html">Auschwitz Camp</a> was to provide some of its inmates as slave laborers for the construction and eventual operation of this chemical factory. To this end, the SS authorities established a labor camp right next to the chemical plant, which was also called Auschwitz-Monowitz. On 22 November 1943, all satellite camps near Auschwitz were separated from the Auschwitz Main Camp and became an independent concentration camp called Auschwitz III, with the headquarters at the Monowitz Camp. On 25 November 1944, the name was changed to Monowitz Concentration Camp.
 			</p>
 			<p>
 				The living conditions in the Monowitz Camp were often described as much better than those in other camps, particularly <a href="/mixed-purpose-camp/auschwitz-main-camp/index.html">Auschwitz Main Camp</a> and <a href="/mixed-purpose-camp/birkenau/index.html">Birkenau</a>. Prisoners who fell ill or were injured and required special care, however, were transferred to Birkenau, whose hospital was better equipped than the infirmary in Monowitz.
