--- a/instruments/tool/carbon-monoxide/index.html
+++ b/instruments/tool/carbon-monoxide/index.html
@@ -317,7 +317,7 @@
 				Looking at this table, any potential mass murderer with technical knowledge common among specialists in wartime Germany would surely have made the correct and obvious choices:
 			</p>
 			<ul>
-				<li>When choosing <a href="/camp/mixed-purpose-camp/auschwitz/index.html">Auschwitz</a> as an extermination center, erect facilities near the <a href="/legal/company/buna/index.html">BUNA</a> coal-liquification plant near <a href="/camp/monowitz/index.html">Monowitz</a>. The SS already had a forced-labor camp there. A small process-gas pipe from the factory to certain camp facilities could have been laid very easily.</li>
+				<li>When choosing <a href="/a/auschwitz/index.html">Auschwitz</a> as an extermination center, erect facilities near the <a href="/legal/company/buna/index.html">BUNA</a> coal-liquification plant near <a href="/camp/monowitz/index.html">Monowitz</a>. The SS already had a forced-labor camp there. A small process-gas pipe from the factory to certain camp facilities could have been laid very easily.</li>
 				<li>For any other location, the generator-gas technology was the obvious choice.</li>
 				<li>Diesel engines are a bad choice, as they produce sufficient CO only when driven under heavy or full load. And even then, many fit and healthy victims will survive an exposure of half an hour or more, which was the alleged maximum gassing time.</li>
 			</ul>
