--- a/instruments/tool/open-air-incinerations/index.html
+++ b/instruments/tool/open-air-incinerations/index.html
@@ -48,7 +48,7 @@
 						<td> summer 1942 </td>
 					</tr>
 					<tr>
-						<td><a href="/camp/mixed-purpose-camp/auschwitz/index.html">Auschwitz</a></td>
+						<td><a href="/a/auschwitz/index.html">Auschwitz</a></td>
 						<td> late September 1942 </td>
 					</tr>
 					<tr>
@@ -74,7 +74,7 @@
 				</tbody>
 			</table>
 			<p>
-				These outdoor cremations are said to have been motivated in some cases by hygienic and sanitary concerns (groundwater pollution; <a href="/camp/mixed-purpose-camp/auschwitz/index.html">Auschwitz</a>) or by esthetic concerns (stench; <a href="/camp/pure-extermination-camp/chelmno/index.html">Chełmno</a>), but in most if not all cases primarily by an attempt to erase the traces of mass crimes, if we follow the orthodox narrative.
+				These outdoor cremations are said to have been motivated in some cases by hygienic and sanitary concerns (groundwater pollution; <a href="/a/auschwitz/index.html">Auschwitz</a>) or by esthetic concerns (stench; <a href="/camp/pure-extermination-camp/chelmno/index.html">Chełmno</a>), but in most if not all cases primarily by an attempt to erase the traces of mass crimes, if we follow the orthodox narrative.
 			</p>
 			<p>
 				In all the cases listed, the bodies of mass casualties or mass murder were first buried in <a href="/locations/other-crime-scene/mass-graves/index.html">mass graves</a>, but presumably on orders of <a href="/persons/himmler-heinrich/index.html">Heinrich Himmler</a>, they all had to be exhumed again and burned. However, no documental trace of such a Himmler order has ever been found. It is attested to only by witness claims of low credibility (such as that by <a href="/witnesses/perpetrator/hoss-rudolf/index.html">Rudolf Höss</a>). To the contrary, a letter written by Himmler on 20 November 1942 has been preserved which clearly specifies that the bodies of deceased Jews have to be <i>either</i> cremated <i>or</i> buried. Hence, still in late 1942 no Himmler order existed to exhume and cremate all buried bodies (see <a href="/bibliography/index.html#Mattogno2022c">Mattogno 2022c</a>, p. 450). Therefore, none of the exhumation and cremation actions started prior to this date can be based on a general Himmler order. If any such order has ever been issued, one would furthermore expect it to have been implemented everywhere more or less at the same time, but this is absolutely not what we see.
@@ -173,7 +173,7 @@
 				A 50-year-old spruce forest usually yields some 500 solid cubic meters of wood per hectare (100 m &times; 100 m, a little more than two American football fields). This amounts to about 450 metric tons of wood. Hence, a square kilometer of such a forest contains some 45,000 metric tons of wood, and a square mile some 116,550 metric tons of wood.
 			</p>
 			<p>
-				An average prisoner is rated at being able to cut some 0.63 metric tons of fresh wood per workday. This value can be used to calculate, how many inmate <a href="/technologies/lumberjacks/index.html">lumberjacks</a> it takes to cut a certain amount of wood within a given period of time. The entry on lumberjacks gives an overview of the firewood that would have been needed to burn the number of corpses alleged by witnesses, or by the orthodox narrative for various claimed Holocaust crime scenes. As an example, the next section discusses some claims made about outdoor cremations at the <a href="/camp/mixed-purpose-camp/auschwitz/index.html">Auschwitz Camp</a>.
+				An average prisoner is rated at being able to cut some 0.63 metric tons of fresh wood per workday. This value can be used to calculate, how many inmate <a href="/technologies/lumberjacks/index.html">lumberjacks</a> it takes to cut a certain amount of wood within a given period of time. The entry on lumberjacks gives an overview of the firewood that would have been needed to burn the number of corpses alleged by witnesses, or by the orthodox narrative for various claimed Holocaust crime scenes. As an example, the next section discusses some claims made about outdoor cremations at the <a href="/a/auschwitz/index.html">Auschwitz Camp</a>.
 			</p>
 			<p>
 				(For details on open-air incinerations, see <a href="/bibliography/index.html#Mattogno2016b">Mattogno 2016b</a>, esp. pp. 60-63, 128-133; <a href="/bibliography/index.html#Graf_Kues">Graf/Kues/Mattogno 2020</a>, pp. 138-157; <a href="/bibliography/index.html#Mattogno_Kues">Mattogno/Kues/Graf 2015</a>, pp. 1226-1328; <a href="/bibliography/index.html#Yerman">Yermán <i>et al</i>.</a>)
