--- a/locations/other-crime-scene/mass-graves/index.html
+++ b/locations/other-crime-scene/mass-graves/index.html
@@ -80,63 +80,27 @@
 						<th>no. of victims at 3 bodies/m&sup3;</th>
 					</tr>
 				</thead>
-<tbody>
+				<tbody>
 					<tr>
 						<td><a href="/instruments/camp/pure-extermination-camp/belzec/index.html">Bełżec</a></td>
-						<td>
-
-							441,000
-												</td>
-						<td>
-
-							~ 18,565
-												</td>
-						<td>
-
-							~ 23.8
-												</td>
-						<td>
-
-							~ 56,000
-												</td>
+						<td> 441,000 </td>
+						<td> ~ 18,565 </td>
+						<td> ~ 23.8 </td>
+						<td> ~ 56,000 </td>
 					</tr>
 					<tr>
 						<td><a href="/camps/sobibor/index.html">Sobibór</a></td>
-						<td>
-
-							80,000
-												</td>
-						<td>
-
-							~ 13,275
-												</td>
-						<td>
-
-							~ 6.0
-												</td>
-						<td>
-
-							~ 40,000
-												</td>
+						<td> 80,000 </td>
+						<td> ~ 13,275 </td>
+						<td> ~ 6.0 </td>
+						<td> ~ 40,000 </td>
 					</tr>
 					<tr>
 						<td><a href="/instruments/camp/pure-extermination-camp/treblinka/index.html">Treblinka</a></td>
-						<td>
-
-							764,000
-												</td>
-						<td>
-
-							~ 14,300
-												</td>
-						<td>
-
-							~ 53.4
-												</td>
-						<td>
-
-							~ 43,000
-												</td>
+						<td> 764,000 </td>
+						<td> ~ 14,300 </td>
+						<td> ~ 53.4 </td>
+						<td> ~ 43,000 </td>
 					</tr>
 				</tbody>
 			</table>
@@ -189,63 +153,41 @@
 						<th>Claimed start of mass-grave exhumation</th>
 					</tr>
 				</thead>
-<tbody>
-
+				<tbody>
 					<tr>
 						<td><a href="/instruments/camp/pure-extermination-camp/chelmno/index.html">Chełmno</a></td>
-						<td>
-
-							summer 1942
-												</td>
+						<td> summer 1942 </td>
 					</tr>
 					<tr>
 						<td><a href="/a/auschwitz/index.html">Auschwitz</a></td>
-						<td>
-
-							late September 1942
-												</td>
+						<td> late September 1942 </td>
 					</tr>
 					<tr>
 						<td><a href="/camps/sobibor/index.html">Sobibór</a></td>
-						<td>
-
-							October 1942
-												</td>
+						<td> October 1942 </td>
 					</tr>
 					<tr>
 						<td><a href="/instruments/camp/pure-extermination-camp/belzec/index.html">Belzec</a></td>
-						<td>
-
-							January 1943
-												</td>
+						<td> January 1943 </td>
 					</tr>
 					<tr>
 						<td><a href="/instruments/camp/majdanek/index.html">Majdanek</a></td>
-						<td>
-
-							February 1943
-												</td>
+						<td> February 1943 </td>
 					</tr>
 					<tr>
 						<td><a href="/instruments/camp/pure-extermination-camp/treblinka/index.html">Treblinka</a></td>
-						<td>
-
-							April 1943
-												</td>
+						<td> April 1943 </td>
 					</tr>
 					<tr>
 						<td><a href="/instruments/tool/einsatzgruppen/index.html"><i>Einsatzgruppen</i></a></td>
-						<td>
-
-							July 1943
-												</td>
+						<td> July 1943 </td>
 					</tr>
 				</tbody>
 			</table>
 			<p>
 				Note also that none of these claimed beginnings of exhumations and cremations is based on any documents. The one document by <a href="/introduction/index.html">Himmler</a> that speaks of what to do with the bodies of deceased Jews dates from 20 November of 1942 and clearly specifies that the bodies of deceased Jews have to be <i>either</i> cremated <i>or</i> buried. Hence, still in late 1942, no order existed to exhume and cremate all buried bodies. (See <a href="/bibliography/index.html#Mattogno2022c">Mattogno 2022c</a>, p. 450.)
 			</p>
-			<!-- #bbinclude "footer.incl" -->
+<!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
 
