--- a/locations/other-crime-scene/brest/index.html
+++ b/locations/other-crime-scene/brest/index.html
@@ -32,7 +32,7 @@
 				No railway documents about this evacuation have been located so far. Since there are plenty of German wartime documents in many other cases truly and verifiably reporting about relocations, evacuations and resettlement of Jews, the orthodoxy&rsquo;s claim of the use of <q>code words</q> or <q>camouflage words</q> is not credible. This is all the more so as the documents in question &mdash; <a href="/instruments/tool/einsatzgruppen/index.html"><i>Einsatzgruppen</i></a> reports &mdash; mince no words when clearly speaking of executions and liquidations in hundreds of other cases, even with respect to Jews from the Brest Ghetto.
 			</p>
 			<p>
-				Regarding the <a href="/mass-graves/index.html">mass graves</a> of the almost 9,000 Jews from Brest allegedly killed in 1941, no clean-up activities by any <a href="/a/aktion-1005/index.html"><i>Aktion</i> 1005</a> are known, in terms of German units erasing traces of their alleged crimes by exhuming and cremating their victims. Hence, these graves should still be there. But no Soviet reports of their discovery are known either.
+				Regarding the <a href="/locations/other-crime-scene/mass-graves/index.html">mass graves</a> of the almost 9,000 Jews from Brest allegedly killed in 1941, no clean-up activities by any <a href="/a/aktion-1005/index.html"><i>Aktion</i> 1005</a> are known, in terms of German units erasing traces of their alleged crimes by exhuming and cremating their victims. Hence, these graves should still be there. But no Soviet reports of their discovery are known either.
 			</p>
 			<p>
 				(See the entry on <a href="/bronnaya-gora/index.html">Bronnaya Gora</a>, as well as <a href="/bibliography/index.html#Mattogno2022c">Mattogno 2022c</a>, pp. 742-755.)
